# outercore

./: .gitmodules
avaj-launcher/: Makefile  sources.txt
avaj-launcher/src/: Aircraft.java  AircraftFactory.java  Baloon.java  Coordinates.java  Flyable.java  Helicopter.java  JetPlane.java  Tower.java  WeatherProvider.java  WeatherTower.java
ft_linear_regression/: estimate_price.py  linear_regression_train.py  predict.py  theta.data  train.py
ft_linear_regression/linear_regression/: load_csv.py  train.py
ft_linear_regression/train/: train.py
malloc/: Makefile  TrueMakefile  main.c  test
malloc/include/: mem_handler.h
malloc/src/: mem_handler.c
piscines/data-science/data-science-0/ex00/: db.md
piscines/data-science/data-science-0/ex02/: tables.py
piscines/data-science/data-science-00/ex02/: tables.sql
piscines/data-science/data-science-00/ex03/: items_table.sql
piscines/python-data-science/python00/ex00/: Hello.py
piscines/python-data-science/python00/ex01/: format_ft_time.py
piscines/python-data-science/python00/ex03/: NULL_not_found.py
piscines/python-data-science/python00/ex04/: whatis.py
piscines/python-data-science/python00/ex09/: LICENSE  pyproject.toml
piscines/python-data-science/python00/ex09/src/: ft_package.py
piscines/python-data-science/python00/ex09/src/ft_package.egg-info/: PKG-INFO  SOURCES.txt
snow-crash/: qemu.txt
snow-crash/level00/resources/: explanation.md
snow-crash/level01/resources/: explanation.md  passwd.txt
snow-crash/level02/resources/: explanation.md  trace.pcap
(+51 files in other folders)
