[project]

name = "ft_package"
version = "0.0.1"
authors = [
  { name="Alejandro José Ruzafa Casás", email="ruzafa8@gmail.com" },
]
description = "My first python package :D"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ruzafa8/"
